--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
 <body>
 
 <%= yield %>
-
+<% if user_signed_in? %>
+Signed in as <%= current_user.email %>. Not you?
+<%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
+<% else %>
+  <% unless current_page?('/users/sign_in') || current_page?('/users/sign_up') %>
+    <%= link_to "Sign up", new_user_registration_path %> or
+    <%= link_to "Sign in", new_user_session_path %>
+  <% end %>
+<% end %>
 </body>
 </html>
