--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,46 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-<% if user_signed_in? %>
-Signed in as <%= current_user.email %>. Not you?
-<%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
-<% else %>
-  <% unless current_page?('/users/sign_in') || current_page?('/users/sign_up') %>
-    <%= link_to "Sign up", new_user_registration_path %> or
-    <%= link_to "Sign in", new_user_session_path %>
-  <% end %>
-<% end %>
+<nav class="navbar navbar-fixed-top navbar-light bg-faded">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <ul class="nav navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Features</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Pricing</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">About</a>
+    </li>
+    <% if user_signed_in? %>
+      <li class="nav-item pull-xs-right">
+        <%= link_to current_user.email, new_user_registration_path, :class => "nav-link" %>
+      </li>
+      <li class="nav-item pull-xs-right">
+        <%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class => "nav-link"  %>
+      </li>
+    <% else %>
+      <% unless current_page?('/users/sign_in') || current_page?('/users/sign_up') %>
+        <li class="nav-item pull-xs-right">
+          <%= link_to "Sign up", new_user_registration_path, :class => "nav-link" %>
+        </li>
+        <li class="nav-item pull-xs-right">
+          <%= link_to "Sign in", new_user_session_path, :class => "nav-link" %>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+  <form class="form-inline pull-xs-right">
+    <input class="form-control" type="text" placeholder="Search">
+    <button class="btn btn-success-outline" type="submit">Search</button>
+  </form>
+</nav>
+<div class="container app-container">
+  <%= yield %>
+</div>
 </body>
 </html>
