--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <%= link_to current_user.email, new_user_registration_path, :class => "nav-link" %>
       </li>
       <li class="nav-item pull-xs-right">
-        <%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class => "nav-link"  %>
+        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
       </li>
     <% else %>
       <% unless current_page?('/users/sign_in') || current_page?('/users/sign_up') %>
